# simpledit-python-plugin

./: .gitignore  README.md  TOON_API_USAGE.md  pyproject.toml
.github/workflows/: notify-parent.yml
src/simpledit_python_plugin/: calculation.py  calculation_api.py  epic_mace.py  main.py  mcd_constraints.py  opsin.py  reaction_engine.py  smiles_to_3d.py  toon_format.py
src/simpledit_python_plugin/calculators/: __init__.py  mace.py  registry.py  template.py  xtb.py
